--- a/reports/diversity-index.Rmd
+++ b/reports/diversity-index.Rmd
@@ -134,8 +134,8 @@ This proof demonstrates how contextual probabilities can be incorporated into th
 
 4. **Confidence Intervals**: Given the probabilistic nature of our model, we should calculate confidence intervals for our diversity predictions.
 
-**Conclusion:** This extended proof provides a robust framework for analyzing community diversity changes over time, incorporating contextual probabilities and various real-world factors. By using census data to estimate $$p_{i,t}$$ and historical trends to determine $$C_i$$, we can predict and analyze community changes with greater accuracy and nuance.
+**Conclusion:** This proof provides a framing for analyzing community diversity changes over time, incorporating contextual probabilities and various real-world factors. By using census data to estimate $$p_{i,t}$$ and historical trends to determine $$C_i$$, we can predict and analyze community changes with greater accuracy and nuance.
 
-This proof demonstrates how our project can leverage automated reasoning techniques to process complex temporal data, incorporating contextual probabilities and multiple influencing factors. It provides a solid foundation for developing algorithms that can offer deep insights into demographic shifts and community dynamics, aligning perfectly with our proposed research objectives.
+The proof demonstrates how our project can leverage automated reasoning techniques to process complex temporal data, incorporating contextual probabilities and multiple influencing factors. It provides a solid foundation for developing algorithms that can offer deep insights into demographic shifts and community dynamics, aligning perfectly with our proposed research objectives.
 
 
