--- a/reports/2025-dc-open-data/2025-dc-open-data.qmd
+++ b/reports/2025-dc-open-data/2025-dc-open-data.qmd
@@ -38,6 +38,7 @@ format:
   html:
     self-contained: true
     embed-resources: true
+  pdf: default
   revealjs:
     output-file: 2025-dc-open-data.html
     height: 900
