--- a/reports/misc/DC_census.Rmd
+++ b/reports/misc/DC_census.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Census research report - CADSA RDC Fellowship"
+title: "Census research report - DC"
 author: 
 - "Nathan Alexander"
 - "Center for Applied Data Science and Analytics (CADSA)"
