--- a/reports/pit-un/code/cleveland-overview.Rmd
+++ b/reports/pit-un/code/cleveland-overview.Rmd
@@ -24,6 +24,8 @@ library(tidycensus)
 library(dplyr)
 library(ggplot2)
 # options(tigris_use_cache = TRUE)
+library(here)
+here::i_am("cleveland-overview.Rmd")
 ```
 
 # Overview
@@ -34,6 +36,16 @@ This information will be used to inform work regarding integrated data systems.
 
 # Data
 
+## Cleveland Open Data
+
+Local data collected from Cleveland Open Data at https://data.clevelandohio.gov/.
+
+```{r, results=T, warning = FALSE, message = FALSE}
+neighborhoods <- read.csv("../data/cleveland_neighborhoods.csv")
+neighborhoods %>% 
+  select(SPA, SPANM, SQ_MILES)
+```
+
 ## Census variables
 
 Tag census variables to be used for analysis.
@@ -42,6 +54,7 @@ Tag census variables to be used for analysis.
 # variables
 vars <- c(
   total_population = "B03002_001", # Total population (universe for race/ethnicity)
+  
   # race-ethnicity vars
   white_alone = "B03002_003", # White alone
   black_alone = "B03002_004", # Black or African American alone
@@ -51,9 +64,7 @@ vars <- c(
   some_other_race_alone = "B03002_008", # Some other race alone
   two_or_more_races = "B03002_009", # Two or more races
   hispanic_or_latino = "B03002_012", # Hispanic or Latino (of any race)
-  # sex vars
-  male_population = "B01001_002", # Male Population
-  female_population = "B01001_026", # Female Population
+  
   # housing and income vars
   lower_income = "B19001_002",             # Households with income less than $10,000
   median_home_value = "B25077_001",        # Median Home Value
@@ -61,7 +72,10 @@ vars <- c(
   public_assistance = "B19058_001",        # Households Receiving Public Assistance
   median_household_income = "B19013_001",  # Median Household Income
   bachelor = "B15003_017",                 # Population over 25 with a Bachelor's degree or higher
+  
   # demographic vars
+  male_population = "B01001_002", # Male Population
+  female_population = "B01001_026", # Female Population
   median_age = "B01002_001",               # Median Age
   employed = "B23025_002",                 # Employed population (age 16+)
   unemployed = "B23025_003",               # Unemployed population (age 16+)
@@ -69,7 +83,7 @@ vars <- c(
   )
 ```
 
-## Database by year
+## Census database by year (2012-2022)
 
 Create data frames for each year.
 
